--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,10 +7,10 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
     <TextView
-        android:id="@+id/lastupdate"
+        android:id="@+id/lastUpdate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Naposled aktualizováno!"
+        android:text="Naposled aktualizováno:"
         android:textColor="@color/black"
         android:textSize="20dp"
         android:textStyle="bold"
@@ -28,10 +28,10 @@
         android:textColor="@color/black"
         android:textSize="20dp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="40dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf= "@id/lastupdate" />
+        app:layout_constraintTop_toBottomOf= "@id/lastUpdate" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
