--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,6 @@
         android:text="Naposled aktualizováno:"
         android:textColor="@color/black"
         android:textSize="20dp"
-        android:textStyle="bold"
         android:layout_marginTop="20dp"
         app:layout_constraintBottom_toOf="baseCurrency"
         app:layout_constraintStart_toStartOf="parent"
@@ -26,12 +25,49 @@
         android:layout_height="wrap_content"
         android:text="@string/base_currency"
         android:textColor="@color/black"
-        android:textSize="20dp"
+        android:textSize="30dp"
         android:textStyle="bold"
         android:layout_marginTop="40dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf= "@id/lastUpdate" />
+
+
+    <TextView
+        android:id="@+id/czk"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/czk"
+        android:textColor="@color/black"
+        android:textSize="30dp"
+        android:layout_marginTop="40dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf= "@id/baseCurrency" />
+
+    <TextView
+        android:id="@+id/eur"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/eur"
+        android:textColor="@color/black"
+        android:textSize="30dp"
+        android:layout_marginTop="40dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf= "@id/czk" />
+
+    <TextView
+        android:id="@+id/usd"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/usd"
+        android:textColor="@color/black"
+        android:textSize="30dp"
+        android:layout_marginTop="40dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf= "@id/eur" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
