--- a/app/src/main/res/layout/activity_main_currency.xml
+++ b/app/src/main/res/layout/activity_main_currency.xml
@@ -24,7 +24,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:text="Aktualizace"
-        android:textColor="@color/black"
+        android:textColor = "?android:textColorPrimary"
         android:textSize="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -47,7 +47,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:text="@string/base_currency"
-        android:textColor="@color/black"
+        android:textColor = "?android:textColorPrimary"
         android:textSize="30dp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -71,7 +71,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:text="@string/gbp"
-        android:textColor="@color/black"
+        android:textColor = "?android:textColorPrimary"
         android:textSize="30dp"
         app:layout_constraintEnd_toEndOf="@+id/gbpicon"
         app:layout_constraintStart_toStartOf="@+id/gbpicon"
@@ -92,7 +92,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/eur"
-        android:textColor="@color/black"
+        android:textColor = "?android:textColorPrimary"
         android:textSize="30dp"
         android:layout_marginTop="8dp"
         app:layout_constraintEnd_toEndOf="@+id/euricon"
@@ -117,7 +117,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:text="@string/usd"
-        android:textColor="@color/black"
+        android:textColor = "?android:textColorPrimary"
         android:textSize="30dp"
         app:layout_constraintEnd_toEndOf="@+id/usdicon"
         app:layout_constraintStart_toStartOf="@+id/usdicon"
