--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
         android:text="Kurzovní přehled"
-        android:textColor="@color/black"
+        android:textColor = "?android:textColorPrimary"
         android:textSize="25dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -72,7 +72,7 @@
         android:layout_marginBottom="20dp"
         android:text="Projekt AK7MT Adam Vrbík"
         android:textAllCaps="false"
-        android:textColor="@color/black"
+        android:textColor = "?android:textColorPrimary"
         android:textIsSelectable="false"
         android:textSize="15dp"
         android:typeface="serif"
