--- a/app/src/main/res/layout/activity_main_currency_usd.xml
+++ b/app/src/main/res/layout/activity_main_currency_usd.xml
@@ -6,4 +6,122 @@
     android:layout_height="match_parent"
     tools:context=".MainActivityCurrencyUSD">
 
+    <TextView
+        android:id="@+id/aktual"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:text="Naposled aktualizováno:"
+        android:textSize="20dp"
+        app:layout_constraintBottom_toTopOf="@+id/lastUpdate"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/lastUpdate"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:text="Aktualizace"
+        android:textColor = "?android:textColorPrimary"
+        android:textSize="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/aktual" />
+
+
+    <ImageView
+        android:id="@+id/czicon"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="35dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/lastUpdate"
+        app:srcCompat="@drawable/dollar_symbol_svgrepo_com" />
+
+    <TextView
+        android:id="@+id/baseCurrency"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:text="@string/base_currency"
+        android:textColor = "?android:textColorPrimary"
+        android:textSize="30dp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/czicon" />
+
+
+    <ImageView
+        android:id="@+id/gbpicon"
+        android:layout_width="35dp"
+        android:layout_height="35dp"
+        android:layout_marginStart="80dp"
+        android:layout_marginTop="40dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/baseCurrency"
+        app:srcCompat="@drawable/pound_svgrepo_com" />
+
+    <TextView
+        android:id="@+id/gbp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="@string/gbp"
+        android:textColor = "?android:textColorPrimary"
+        android:textSize="30dp"
+        app:layout_constraintEnd_toEndOf="@+id/gbpicon"
+        app:layout_constraintStart_toStartOf="@+id/gbpicon"
+        app:layout_constraintTop_toBottomOf="@id/gbpicon" />
+
+    <ImageView
+        android:id="@+id/euricon"
+        android:layout_width="35dp"
+        android:layout_height="35dp"
+        android:layout_marginStart="80dp"
+        android:layout_marginTop="40dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/gbp"
+        app:srcCompat="@drawable/euro_svgrepo_com" />
+
+    <TextView
+        android:id="@+id/eur"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/eur"
+        android:textColor = "?android:textColorPrimary"
+        android:textSize="30dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintEnd_toEndOf="@+id/euricon"
+        app:layout_constraintStart_toStartOf="@+id/euricon"
+        app:layout_constraintTop_toBottomOf="@id/euricon"/>
+
+    <ImageView
+        android:id="@+id/usdicon"
+        android:layout_width="35dp"
+        android:layout_height="35dp"
+        android:layout_marginStart="80dp"
+        android:layout_marginTop="40dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/eur"
+
+
+        app:srcCompat="@drawable/flag_for_czechia_svgrepo_com" />
+
+    <TextView
+        android:id="@+id/czk"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="@string/czk"
+        android:textColor = "?android:textColorPrimary"
+        android:textSize="30dp"
+        app:layout_constraintEnd_toEndOf="@+id/usdicon"
+        app:layout_constraintStart_toStartOf="@+id/usdicon"
+        app:layout_constraintTop_toBottomOf="@+id/usdicon" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
